--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,4 +1,4 @@
-<li> style = "border-top: 1px solid #e8e8e8; list-style : none;">
+<li style = "border-top: 1px solid #e8e8e8; list-style : none;">
   <span class="content"><%= micropost.content %></span>
   <span style = "color : grey"> <br>
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
