--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,24 @@
 
+<% if signed_in? %>
+<div class="row">
+<div class="small-4 columns" style = "margin-top : 20px" >
+	    <%= render 'shared/user_info' %>
+		<%= render 'shared/micropost_form' %> 
+
+    </div>
+    
+		
+     <div class="small-8 columns"> <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %></div>
+		
+	
+	
+</div>
+
+
+
+<% else %>
+
 <div class="row">
 
   <div class="small-10 columns">
@@ -20,4 +40,4 @@
 
 
 
-
+<% end -%>
