--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
 <h1>Sign up </h1>
 
 <%= form_for (@user) do |f| %>
-<%= render 'shared/error_messages' %>
+<%= render 'shared/error_messages', object: f.object %>
 	<%= f.label :name, "Name" %>
 	<%= f.text_field :name %>
 	<%= f.label :email, "Email" %>
