stats and a follow form

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,7 @@
 <div class="row">
 <div class="small-4 columns" style = "margin-top : 20px" >
 	    <%= render 'shared/user_info' %>
+      <%= render 'shared/stats' %> <br>
 		<%= render 'shared/micropost_form' %> 
 
     </div>
