--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,10 @@
 
   <!-- <center style="margin-top: 30px; margin-right: 1000px;">
 	</center> -->
+    <br><br>
+<%= render 'shared/stats' %>
+<br>
+<%= render 'follow_form' if signed_in? %>
 </div>
 	
      <div class="small-9 columns">
